--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "biblia-discord-bot"
-version = "0.1.4"
+version = "0.2.4"
 edition = "2021"
 
 [dependencies]
@@ -8,6 +8,10 @@ serde_json = "1.0.64"
 serde = { version = "1.0.96", features = ["derive"] }
 tokio = { version = "1.0.0", features = ["full"] }
 strsim = "0.10.0"
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+openssl = { version = "0.10", features = ["vendored"] }
+proc-macro2 = "1.0.78"
+dotenv = "0.15.0"
 
 [dependencies.serenity]
 default-features = false
