--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ reqwest = { version = "0.11", features = ["json", "blocking"] }
 openssl = { version = "0.10", features = ["vendored"] }
 proc-macro2 = "1.0.78"
 dotenv = "0.15.0"
+regex = "1.10.4"
 
 [dependencies.serenity]
 default-features = false
